<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:visible="false"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_menu_client"
            android:title="@string/menu_client" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_ic_info"
            android:title="@string/menu_about" />



        <item
            android:id="@+id/nav_pre_invoice"
            android:icon="@drawable/ic_invoice"
            android:visible="false"
            android:title="@string/menu_pre_invoice" />



    </group>
</menu>